# tp_dz2_c

./: .travis.yml  CMakeLists.txt  README.md  consistent.c  generate_long_input.c  go  main.c  parallel.c  tests_lib.cpp
.github/workflows/: learn-github-actions.yml
include/: enum.h  search.h
